# ev-betting-engine

./: .env.example  .gitignore  CLAUDE.md  MANUAL.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: ae2f4ed2ca6e_add_players_and_player_match_stats_.py  c3d9a41b7f02_odds_quote_match_required_value_bet_.py  d4e1f9a2b613_value_bets_lineup_confirmed.py  d9433886bf4e_add_bookmaker_to_value_bets_settled_.py  f1457c4e1098_create_initial_tables.py
docs/superpowers/plans/: 2026-07-06-frontend-panel-plan.md
docs/superpowers/specs/: 2026-07-06-frontend-panel-design.md
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  setupTests.ts
frontend/src/api/: client.test.ts  client.ts  pipeline.test.tsx  pipeline.ts  types.ts  valueBets.test.tsx  valueBets.ts
frontend/src/components/: RunPipelineBar.test.tsx  RunPipelineBar.tsx  SettleBetModal.test.tsx  SettleBetModal.tsx  ValueBetFilters.test.tsx  ValueBetFilters.tsx  ValueBetTable.test.tsx  ValueBetTable.tsx
src/application/: exceptions.py
src/application/use_cases/: __init__.py  compute_correction_factors.py  detect_match_value_bets.py  detect_player_prop_value_bets.py  get_calibration_report.py  ingest_local_odds.py  ingest_player_stats.py  ingest_sharp_odds.py  list_value_bets.py  run_pipeline.py  settle_bet.py
src/domain/entities/: bet_result.py  bookmaker.py  injury_status.py  injury_status_type.py  league.py  lineup_confirmation.py  market_type.py  match.py  model_source.py  odds_quote.py  player.py  player_match_stats.py  player_position.py  player_prop_market.py  player_prop_type.py  selection.py  settled_bet.py  team.py  team_form.py  value_bet.py
src/domain/ports/: correction_factor_repository.py  local_odds_provider.py  match_repository.py  odds_repository.py  player_repository.py  player_stats_provider.py  player_stats_repository.py  settled_bet_repository.py  sharp_odds_provider.py  stats_provider.py  value_bet_repository.py
src/domain/value_objects/: decimal_odds.py  edge_percentage.py  probability.py  stake.py
src/infrastructure/: config.py
src/infrastructure/persistence/: mappers.py  models.py  session.py  upserts.py
src/infrastructure/providers/: exceptions.py
src/presentation/api/: app.py  dependencies.py  exception_handlers.py  logging_config.py  scheduler.py  schemas.py
tests/: fakes.py  test_async_smoke.py
tests/application/use_cases/: conftest.py  test_compute_correction_factors.py  test_detect_match_value_bets.py  test_detect_player_prop_value_bets.py  test_get_calibration_report.py  test_ingest_local_odds.py  test_ingest_player_stats.py  test_ingest_sharp_odds.py  test_list_value_bets.py  test_run_pipeline.py  test_settle_bet.py
tests/domain/entities/: conftest.py  test_bet_result.py  test_bookmaker.py  test_injury_status.py  test_injury_status_type.py  test_league.py  test_lineup_confirmation.py  test_market_type.py  test_match.py  test_model_source.py  test_odds_quote.py  test_player.py  test_player_match_stats.py  test_player_position.py  test_player_prop_market.py  (+6 more)
tests/infrastructure/: test_config.py
(+125 files in other folders)
